[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
authors = ["Teoh Han Hui <teohhanhui@gmail.com>", "Lee Siong Chan <leesiongchan@duck.com>", "Momo <luna.cloudberry@gmail.com>"]
edition = "2024"
rust-version = "1.87.0"
description = "A functional and reactive framework"
repository = "https://github.com/teohhanhui/cyclers"
license = "MIT OR Apache-2.0"
keywords = ["frp", "functional", "reactive", "framework", "stream"]
categories = ["asynchronous"]

[workspace.dependencies]
anyhow = { version = "1.0.95", default-features = false }
bytes = { version = "1.9.0", default-features = false }
futures-channel = { version = "0.3.31", default-features = false }
futures-concurrency = { version = "7.6.3", default-features = false }
futures-lite = { version = "2.5.0", default-features = false }
futures-rx = { version = "0.2.1", default-features = false }
http = { version = "1.3.1", default-features = false }
http-body-util = { version = "0.1.0", default-features = false }
httpmock = { version = "0.8.0-alpha.1", default-features = false }
indexmap = { version = "2.2.1", default-features = false }
js-sys = { version = "0.3.77", default-features = false }
matchbox_socket = { version = "0.12.0", default-features = false }
papaya = { version = "0.2.1", default-features = false }
paste = { version = "1.0.15", default-features = false }
reqwest = { version = "0.12.21", default-features = false }
rustix = { version = "1.0.3", default-features = false }
tokio = { version = "1.45.0", default-features = false }
tokio-stream = { version = "0.1.16", default-features = false }
tokio-util = { version = "0.7.15", default-features = false }
tracing = { version = "0.1.41", default-features = false }
tracing-futures = { version = "0.2.5", default-features = false }
url = { version = "2.5.4", default-features = false }
wasm-bindgen = { version = "0.2.100", default-features = false }
wasm-bindgen-test = { version = "0.3.50", default-features = false }
web-transport-quinn = { version = "0.8.1", default-features = false }
web-transport-wasm = { version = "0.5.1", default-features = false }
wstd = { version = "0.5.4", default-features = false }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
arithmetic_side_effects = "warn"
unused_trait_names = "warn"

[patch.crates-io]
futures-rx = { git = "https://github.com/teohhanhui/rxrs", branch = "feat/shared-arc-mutex" }
web-transport-quinn = { git = "https://github.com/teohhanhui/web-transport-rs", branch = "fix/feature-combinations" }
