[workspace]
resolver = "2"
members = ["*"]
exclude = ["target"]

[workspace.package]
edition = "2024"
rust-version = "1.87.0"

[workspace.dependencies]
anyhow = { version = "1.0.95", default-features = false }
futures-concurrency = { version = "7.6.3", default-features = false }
futures-lite = { version = "2.5.0", default-features = false }
futures-rx = { version = "0.2.1", default-features = false }
reqwest = { version = "0.12.21", default-features = false }
serde_json = { version = "1.0.118", default-features = false }
tokio = { version = "1.45.0", default-features = false }
url = { version = "2.5.4", default-features = false }
wasm-bindgen-test = { version = "0.3.50", default-features = false }
wstd = { version = "0.5.3", default-features = false }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
arithmetic_side_effects = "warn"
unused_trait_names = "warn"

[patch.crates-io]
futures-rx = { git = "https://github.com/teohhanhui/rxrs", branch = "feat/shared-arc-mutex" }
wstd = { git = "https://github.com/bytecodealliance/wstd", branch = "main" }
wstd-macro = { git = "https://github.com/bytecodealliance/wstd", branch = "main" }
