[package]
name = "cyclers-http"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = "A cyclers driver for HTTP"
readme = "README.md"
repository = { workspace = true }
license = { workspace = true }
keywords = ["cyclers", "http", "client", "request"]
categories = ["asynchronous", "web-programming::http-client", "wasm"]

[dependencies]
bytes = { workspace = true, features = ["std"] }
cyclers = { version = "0.1.0", path = "../cyclers", default-features = false, features = [] }
futures-concurrency = { workspace = true, features = ["std"] }
futures-lite = { workspace = true, features = ["std"] }
futures-rx = { workspace = true, features = [] }
http = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["sync"] }
tokio-stream = { workspace = true, features = [] }
tracing = { workspace = true, features = ["attributes", "log", "std"], optional = true }
tracing-futures = { workspace = true, features = ["futures-03", "std", "std-future"], optional = true }

[dev-dependencies]
anyhow = { workspace = true, features = ["std"] }

[target.'cfg(any(not(target_family = "wasm"), all(target_family = "wasm", target_os = "unknown")))'.dependencies]
http-body-util = { workspace = true, features = [] }
reqwest = { workspace = true, features = [] }

[target.'cfg(all(target_os = "wasi", target_env = "p2"))'.dependencies]
wstd = { workspace = true, features = [] }

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
httpmock = { workspace = true, features = ["cookies"] }
tokio = { workspace = true, features = ["macros", "rt"] }

[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dev-dependencies]
wasm-bindgen-test = { workspace = true, features = ["std"] }

[features]
default = []
tracing = ["dep:tracing", "dep:tracing-futures"]

[lints]
workspace = true

[package.metadata.docs.rs]
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "i686-unknown-linux-gnu",
    "i686-pc-windows-msvc",
    "wasm32-unknown-unknown",
    "wasm32-wasip2",
]
