[package]
name = "cyclers-webrtc"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = "A cyclers driver for WebRTC, based on matchbox"
readme = "README.md"
repository = { workspace = true }
license = { workspace = true }
keywords = ["cyclers", "webrtc", "matchbox", "peer-to-peer", "mesh"]
categories = ["asynchronous", "network-programming", "web-programming", "wasm"]

[dependencies]
cyclers = { version = "0.1.0", path = "../cyclers", default-features = false, features = [] }
futures-channel = { workspace = true, features = ["std"] }
futures-concurrency = { workspace = true, features = ["std"] }
futures-lite = { workspace = true, features = ["std"] }
futures-rx = { workspace = true, features = [] }
indexmap = { workspace = true, features = ["std"] }
matchbox_socket = { workspace = true, features = [] }
tokio = { workspace = true, features = ["sync"] }
tokio-util = { workspace = true, features = [] }
tracing = { workspace = true, features = ["attributes", "log", "std"], optional = true }
tracing-futures = { workspace = true, features = ["futures-03", "std", "std-future"], optional = true }

[dev-dependencies]
anyhow = { workspace = true, features = ["std"] }

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }

[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dev-dependencies]
wasm-bindgen-test = { workspace = true, features = ["std"] }

[features]
default = []
tracing = ["dep:tracing", "dep:tracing-futures", "tokio/rt", "tokio/tracing"]

[lints]
workspace = true

[package.metadata.docs.rs]
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "i686-unknown-linux-gnu",
    "i686-pc-windows-msvc",
    "wasm32-unknown-unknown",
]
