[package]
name = "cyclers"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
futures-channel = { workspace = true, features = ["std"], optional = true }
futures-concurrency = { workspace = true, features = ["std"] }
futures-core = { workspace = true, features = [] }
futures-lite = { workspace = true, features = ["std"] }
futures-rx = { workspace = true, features = [] }
matchbox_socket = { workspace = true, features = [], optional = true }
paste = { workspace = true, features = [] }
tokio = { workspace = true, features = ["sync"] }
tokio-stream = { workspace = true, features = [] }
tokio-util = { workspace = true, features = [], optional = true }

[dev-dependencies]
anyhow = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
rustix = { workspace = true, features = [], optional = true }

[features]
default = ["terminal", "webrtc"]
terminal = ["rustix/fs", "tokio/io-std", "tokio/net", "tokio-util/codec"]
webrtc = ["dep:futures-channel", "dep:matchbox_socket", "dep:tokio-util"]

[lints]
workspace = true

[[example]]
name = "terminal-echo"
required-features = ["terminal"]

[[example]]
name = "webrtc-chat"
required-features = ["terminal", "webrtc"]
