[package]
name = "cyclers"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = { workspace = true }
readme = "../../README.md"
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
futures-concurrency = { workspace = true, features = ["std"] }
futures-lite = { workspace = true, features = ["std"] }
futures-rx = { workspace = true, features = [] }
paste = { workspace = true, features = [] }
tokio = { workspace = true, features = ["sync"] }
tokio-stream = { workspace = true, features = [] }

[dev-dependencies]
anyhow = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["macros", "rt"] }

[target.'cfg(all(target_arch = "wasm32", any(target_os = "unknown", target_os = "none")))'.dev-dependencies]
wasm-bindgen-test = { workspace = true, features = ["std"] }

[lints]
workspace = true
