[package]
name = "cyclers"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = { workspace = true }
readme = "../../README.md"
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
futures-concurrency = { workspace = true, features = ["std"] }
futures-lite = { workspace = true, features = ["std"] }
paste = { workspace = true, features = [] }
tokio = { workspace = true, features = ["sync"] }
tokio-stream = { workspace = true, features = [] }

[dev-dependencies]
anyhow = { workspace = true, features = ["std"] }

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }

[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dev-dependencies]
wasm-bindgen-test = { workspace = true, features = ["std"] }

[target.'cfg(all(target_os = "wasi", target_env = "p2"))'.dev-dependencies]
wstd = { workspace = true, features = [] }

[lints]
workspace = true

[package.metadata.docs.rs]
additional-targets = ["wasm32-unknown-unknown", "wasm32-wasip2"]
