[package]
name = "example-http-wiki"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }
publish = false

[dependencies]
anyhow = { workspace = true, features = ["std"] }
cyclers = { path = "../../crates/cyclers", default-features = false, features = [] }
cyclers-http = { path = "../../crates/cyclers-http", default-features = false, features = ["tracing"] }
cyclers-terminal = { path = "../../crates/cyclers-terminal", default-features = false, features = ["tracing"] }
futures-concurrency = { workspace = true, features = ["std"] }
futures-lite = { workspace = true, features = ["std"] }
futures-rx = { workspace = true, features = [] }
serde_json = { workspace = true, features = ["preserve_order", "std"] }
tracing = { workspace = true, features = ["std"] }
tracing-subscriber = { workspace = true, features = ["ansi", "env-filter", "fmt", "smallvec", "std", "tracing-log"] }
url = { workspace = true, features = ["std"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
reqwest = { workspace = true, features = ["default-tls"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[target.'cfg(all(target_os = "wasi", target_env = "p2"))'.dependencies]
wstd = { workspace = true, features = [] }

[lints]
workspace = true
