[package]
name = "example-webrtc-chat"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }
publish = false

[dependencies]
anyhow = { workspace = true, features = ["std"] }
cyclers = { path = "../../crates/cyclers", default-features = false, features = [] }
cyclers-terminal = { path = "../../crates/cyclers-terminal", default-features = false, features = ["tracing"] }
cyclers-webrtc = { path = "../../crates/cyclers-webrtc", default-features = false, features = ["tracing"] }
futures-concurrency = { workspace = true, features = ["std"] }
futures-lite = { workspace = true, features = ["std"] }
futures-rx = { workspace = true, features = [] }
tracing = { workspace = true, features = ["std"] }
tracing-subscriber = { workspace = true, features = ["ansi", "env-filter", "fmt", "smallvec", "std", "tracing-log"] }

[target.'cfg(not(any(target_family = "wasm", target_os = "wasi")))'.dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
