[package]
name = "example-webtrans-echo"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }
publish = false

[dependencies]
anyhow = { workspace = true, features = ["std"] }
bytes = { workspace = true, features = ["std"] }
cyclers = { path = "../../crates/cyclers", default-features = false, features = [] }
cyclers-terminal = { path = "../../crates/cyclers-terminal", default-features = false, features = ["tracing"] }
cyclers-webtrans = { path = "../../crates/cyclers-webtrans", default-features = false, features = ["rustls-aws-lc-rs", "tracing"] }
futures-concurrency = { workspace = true, features = ["std"] }
futures-lite = { workspace = true, features = ["std"] }
futures-rx = { workspace = true, features = [] }
tokio = { workspace = true, features = ["rt", "sync", "tracing"] }
tokio-stream = { workspace = true, features = [] }
tracing = { workspace = true, features = ["std"] }
tracing-subscriber = { workspace = true, features = ["ansi", "env-filter", "fmt", "registry", "smallvec", "std", "tracing-log"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
console-subscriber = { workspace = true, features = [] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
